--- a/release/hdph-0.0.1/hdph.cabal
+++ b/release/hdph-0.0.1/hdph.cabal
@@ -11,7 +11,7 @@ author:        Patrick Maier <C.Patrick.Maier@gmail.com>,
                Rob Stewart <robstewart57@gmail.com>
 maintainer:    Patrick Maier <C.Patrick.Maier@gmail.com>
 stability:     experimental
-category:      Control
+category:      Control, Parallelism, Distributed Computing, Monads
 tested-with:   GHC == 7.4.1 || == 7.6.2
 build-type:    Simple
 cabal-version: >= 1.8
@@ -51,7 +51,7 @@ Library
                    time >= 1.2 && < 2,
                    hdph-closure == 0.0.1
   hs-source-dirs:  src
-  ghc-options:     -O2
+  ghc-options:     
 
 Executable hello
   main-is:         Test/HdpH/hello.hs
@@ -71,7 +71,7 @@ Executable hello
                    time >= 1.2 && < 2,
                    hdph-closure == 0.0.1
   hs-source-dirs:  src
-  ghc-options:     -O2 -threaded
+  ghc-options:     -threaded
 
 Executable fib
   main-is:         Test/HdpH/fib.hs
@@ -91,7 +91,7 @@ Executable fib
                    time >= 1.2 && < 2,
                    hdph-closure == 0.0.1
   hs-source-dirs:  src
-  ghc-options:     -O2 -threaded
+  ghc-options:     -threaded
 
 Executable sumeuler
   main-is:         Test/HdpH/sumeuler.hs
@@ -111,7 +111,7 @@ Executable sumeuler
                    time >= 1.2 && < 2,
                    hdph-closure == 0.0.1
   hs-source-dirs:  src
-  ghc-options:     -O2 -threaded
+  ghc-options:     -threaded
 
 Executable nbody
   main-is:         Test/HdpH/nbody.hs
@@ -131,4 +131,4 @@ Executable nbody
                    time >= 1.2 && < 2,
                    hdph-closure == 0.0.1
   hs-source-dirs:  src
-  ghc-options:     -O2 -threaded
+  ghc-options:     -threaded
