--- a/release/hdph-closure-0.0.1/hdph-closure.cabal
+++ b/release/hdph-closure-0.0.1/hdph-closure.cabal
@@ -11,7 +11,7 @@ license-file:  LICENSE
 author:        Patrick Maier <C.Patrick.Maier@gmail.com>
 maintainer:    Patrick Maier <C.Patrick.Maier@gmail.com>
 stability:     experimental
-category:      Control
+category:      Control, Distributed Computing
 tested-with:   GHC == 7.4.1 || == 7.6.2
 build-type:    Simple
 cabal-version: >= 1.8
@@ -30,4 +30,4 @@ Library
                    containers >= 0.1 && < 0.6,
                    deepseq >= 1.1 && < 2
   hs-source-dirs:  src
-  ghc-options:     -O2
+  ghc-options:     
