--- a/hdph-0.2.2/hdph.cabal
+++ b/hdph-0.2.2/hdph.cabal
@@ -1,5 +1,5 @@
 name:          hdph
-version:       0.2.1
+version:       0.2.2
 synopsis:      Haskell distributed parallel Haskell
 description:   Haskell distributed parallel Haskell (HdpH) is a Haskell DSL
                for distributed-memory parallelism, implemented entirely in
@@ -59,7 +59,7 @@ Library
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.7,
-                   hdph-closure >= 0.1.0 && < 0.2
+                   hdph-closure >= 0.2.0 && < 0.3
   hs-source-dirs:  src
   ghc-options:     -Wall
   if flag(WithMPI)
@@ -89,7 +89,7 @@ Executable hello
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.7,
-                   hdph-closure >= 0.1.0 && < 0.2
+                   hdph-closure >= 0.2.0 && < 0.3
   hs-source-dirs:  src
   ghc-options:     -Wall -threaded -rtsopts
   if flag(WithMPI)
@@ -117,7 +117,7 @@ Executable dist
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.7,
-                   hdph-closure >= 0.1.0 && < 0.2
+                   hdph-closure >= 0.2.0 && < 0.3
   hs-source-dirs:  src
   ghc-options:     -Wall -threaded -rtsopts
   if flag(WithMPI)
@@ -145,7 +145,7 @@ Executable fib
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.7,
-                   hdph-closure >= 0.1.0 && < 0.2
+                   hdph-closure >= 0.2.0 && < 0.3
   hs-source-dirs:  src
   ghc-options:     -Wall -threaded -rtsopts
   if flag(WithMPI)
@@ -173,7 +173,7 @@ Executable sumeuler
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.7,
-                   hdph-closure >= 0.1.0 && < 0.2
+                   hdph-closure >= 0.2.0 && < 0.3
   hs-source-dirs:  src
   ghc-options:     -Wall -threaded -rtsopts
   if flag(WithMPI)
@@ -201,7 +201,35 @@ Executable sumeuler-2level
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.7,
-                   hdph-closure >= 0.1.0 && < 0.2
+                   hdph-closure >= 0.2.0 && < 0.3
+  hs-source-dirs:  src
+  ghc-options:     -Wall -threaded -rtsopts
+  if flag(WithMPI)
+    build-depends:   hdph-mpi-allgather >= 0.0.1 && < 0.1
+    cpp-options:     -DSTARTUP_MPI
+  else
+    build-depends:   network-multicast >= 0.0.7 && < 0.1
+    cpp-options:     -DSTARTUP_UDP
+
+Executable queens
+  main-is:         Test/HdpH/queens.hs
+  build-depends:   template-haskell,
+                   array >= 0.4 && < 0.5,
+                   base >= 4 && < 5,
+                   cereal >= 0.3.3 && < 0.4,
+                   bytestring == 0.10.*,
+                   containers >= 0.1 && < 0.6,
+                   deepseq >= 1.1 && < 2,
+                   hashable >= 1.1 && < 2,
+                   mtl >= 2 && < 3,
+                   network == 2.4.*,
+                   network-info == 0.2.*,
+                   network-transport == 0.3.*,
+                   network-transport-tcp == 0.3.*,
+                   random >= 1 && < 2,
+                   time >= 1.2 && < 2,
+                   unix >= 2.6 && < 2.7,
+                   hdph-closure >= 0.2.0 && < 0.3
   hs-source-dirs:  src
   ghc-options:     -Wall -threaded -rtsopts
   if flag(WithMPI)
@@ -229,7 +257,7 @@ Executable nbody
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.7,
-                   hdph-closure >= 0.1.0 && < 0.2
+                   hdph-closure >= 0.2.0 && < 0.3
   hs-source-dirs:  src
   ghc-options:     -Wall -threaded -rtsopts
   if flag(WithMPI)
