Added a simple priority queue based workqueue

--- a/hdph/hdph.cabal
+++ b/hdph/hdph.cabal
@@ -25,6 +25,7 @@ Library
                    Control.Parallel.HdpH.Internal.CommStartupUDP,
                    Control.Parallel.HdpH.Internal.Data.CacheMap.Strict,
                    Control.Parallel.HdpH.Internal.Data.Deque,
+                   Control.Parallel.HdpH.Internal.Data.PriorityWorkQueue,
                    Control.Parallel.HdpH.Internal.Data.DistMap,
                    Control.Parallel.HdpH.Internal.Data.Sem,
                    Control.Parallel.HdpH.Internal.GRef,
@@ -56,6 +57,7 @@ Library
                    network-multicast >= 0.0.7 && < 0.2,
                    network-transport == 0.4.*,
                    network-transport-tcp == 0.4.*,
+                   pqueue >= 1.3 && < 1.4,
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.8,
