Moving the sparkpools to priority based schedulers

--- a/hdph/hdph.cabal
+++ b/hdph/hdph.cabal
@@ -82,6 +82,7 @@ Executable hello
                    network-multicast >= 0.0.7 && < 0.2,
                    network-transport == 0.4.*,
                    network-transport-tcp == 0.4.*,
+                   pqueue >= 1.3 && < 1.4,
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.8,
@@ -106,6 +107,7 @@ Executable dist
                    network-multicast >= 0.0.7 && < 0.2,
                    network-transport == 0.4.*,
                    network-transport-tcp == 0.4.*,
+                   pqueue >= 1.3 && < 1.4,
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.8,
@@ -131,6 +133,7 @@ Executable fib
                    network-multicast >= 0.0.7 && < 0.2,
                    network-transport == 0.4.*,
                    network-transport-tcp == 0.4.*,
+                   pqueue >= 1.3 && < 1.4,
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.8,
@@ -155,6 +158,7 @@ Executable sumeuler
                    network-multicast >= 0.0.7 && < 0.2,
                    network-transport == 0.4.*,
                    network-transport-tcp == 0.4.*,
+                   pqueue >= 1.3 && < 1.4,
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.8,
@@ -180,6 +184,7 @@ Executable sumeuler-2level
                    network-multicast >= 0.0.7 && < 0.2,
                    network-transport == 0.4.*,
                    network-transport-tcp == 0.4.*,
+                   pqueue >= 1.3 && < 1.4,
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.8,
@@ -204,6 +209,8 @@ Executable queens
                    network-multicast >= 0.0.7 && < 0.2,
                    network-transport == 0.4.*,
                    network-transport-tcp == 0.4.*,
+                   pqueue >= 1.3 && < 1.4,
+                   pqueue >= 1.3 && < 1.4,
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.8,
@@ -228,6 +235,7 @@ Executable nbody
                    network-multicast >= 0.0.7 && < 0.2,
                    network-transport == 0.4.*,
                    network-transport-tcp == 0.4.*,
+                   pqueue >= 1.3 && < 1.4,
                    random >= 1 && < 2,
                    time >= 1.2 && < 2,
                    unix >= 2.6 && < 2.8,
@@ -253,6 +261,7 @@ Executable sum-liouville
                    network-multicast >= 0.0.7 && < 0.2,
                    network-transport == 0.4.*,
                    network-transport-tcp == 0.4.*,
+                   pqueue >= 1.3 && < 1.4,
                    random >= 1 && < 2,
                    random-fu >= 0.2 && < 0.3,
                    random-source >= 0.3 && < 0.4,
@@ -283,6 +292,7 @@ Executable mandel
                    network-multicast >= 0.0.7 && < 0.2,
                    network-transport == 0.4.*,
                    network-transport-tcp == 0.4.*,
+                   pqueue >= 1.3 && < 1.4,
                    random >= 1 && < 2,
                    split >= 0.2 && < 3,
                    time >= 1.2 && < 2,
